# miditool

./: CMakeLists.txt  README
midilib/: CMakeLists.txt  midi event types.uxf  midi_events_fusion.hpp  midi_file_fusion.hpp  midi_parser.cpp  next_directive.hpp  subrange_parser.hpp
midilib/include/: midi_event_types.hpp  midi_event_visitor.hpp  midi_file.hpp  midi_multiplexer.hpp  midi_parser.hpp  timed_midi_visitor.hpp
miditool/: CMakeLists.txt  miditool.cpp
